# template-tornado-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cookiecutter.json  deployment_config.yml  pyproject.toml
.azure-devops/pipelines/: azure-pipeline.yml
.github/workflows/: static_analysis.yml  unit_tests.yml
hooks/: post_gen_project.py  pre_gen_project.py
odp/app/myapp/: __main__.py
tests/: test_bake_project.py
{{cookiecutter.github_repo_name}}/: .dockerignore  Dockerfile  MAINTAINERS.md  README.md  pyproject.toml
{{cookiecutter.github_repo_name}}/.azure-devops/pipelines/: azure-pipeline.yml
{{cookiecutter.github_repo_name}}/.github/workflows/: build_image.yml  static_analysis.yml
{{cookiecutter.github_repo_name}}/odp/app/{{cookiecutter.project_slug}}/: __main__.py
{{cookiecutter.github_repo_name}}/tests/: test_example.py
{{cookiecutter.project_slug}}/: Dockerfile  README.md  deployment_config.yml  pyproject.toml
{{cookiecutter.project_slug}}/.azure-devops/pipelines/: azure-pipeline.yml
{{cookiecutter.project_slug}}/.github/actions/deploy/: action.yml
{{cookiecutter.project_slug}}/.github/workflows/: build_image.yml
{{cookiecutter.project_slug}}/odp/app/{{cookiecutter.project_slug}}/: __main__.py
