[tool.poetry]
name = "ODP App Template"
version = "0.1.0"
description = "ODP App template"
authors = ["Thomas Li Fredriksen <thomas.fredriksen@oceandata.earth>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
click = "^8.0.3"
cookiecutter = "^1.7.3"
typing-extensions = "^4.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
