[tool.poetry]
name = "ODP Tornado API Template"
version = "0.1.0"
description = "ODP Tornado web API template"
authors = ["Thomas Li Fredriksen <thomas.fredriksen@oceandata.earth>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
cookiecutter = "^1.7.3"
typing-extensions = "^4.0.0"
tornado = "^6.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
