[tool.poetry]
name = "ODP Tornado API Template"
version = "0.1.0"
description = "ODP Tornado web API template"
authors = ["Thomas Li Fredriksen <thomas.fredriksen@oceandata.earth>"]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.0.0"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cookies = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
